--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
 
 <body>
-    <div id="app">
+    <style>
+        [v-cloak] { display: none }
+    </style>
+    <div id="app" v-cloak>
         <h1>{{ title }}</h1>
     </div>
 
