--- a/index.html
+++ b/index.html
@@ -2,22 +2,8 @@
 <html>
 
 <body>
-    <style>
-        [v-cloak] { display: none }
-    </style>
-    <div id="app" v-cloak>
-        <h1>{{ title }}</h1>
-    </div>
-
-    <script src='https://unpkg.com/vue'></script>
-    <script>
-        new Vue({
-            el: '#app',
-            data: {
-                title: 'Hello Vue.js'
-            },
-        })
-    </script>
+    <div id="app"></div>
+    <script src="/dist/build.js"></script>
 </body>
 
 </html>
