--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!doctype html>
 <html>
-
+<head>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat|Material+Icons">
+</head>
 <body>
     <div id="app"></div>
     <script src="/dist/build.js"></script>
+    <style>body { font-family: Montserrat, Ubuntu, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }</style>
 </body>
 
 </html>
