--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 </head>
 <body>
     <div id="app"></div>
-    <script src="/dist/build.js"></script>
+    <script src="/dist/vendor.js"></script>
+    <script src="/dist/material.js"></script>
+    <script src="/dist/app.js"></script>
     <style>body { font-family: Montserrat, Ubuntu, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }</style>
 </body>
 
