--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <body>
     <div id="app"></div>
-    <script src="/dist/build.js"></script>
+    <script src="./src/main.js"></script>
 </body>
 
 </html>
